modify component style, changed schedule component by schedules.json.

--- a/playit2019/public/css/agency.css
+++ b/playit2019/public/css/agency.css
@@ -309,7 +309,10 @@ header.masthead .intro-text .intro-heading {
 }
 
 .portfolio-modal .modal-content {
-  padding: 100px 0;
+  padding-left:0px;
+  padding-right:0px;
+  padding-top:50px;
+  padding-bottom:0px;
   text-align: center;
 }
 
@@ -319,7 +322,7 @@ header.masthead .intro-text .intro-heading {
 }
 
 .portfolio-modal .modal-content p {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .portfolio-modal .modal-content p.item-intro {
@@ -345,9 +348,9 @@ header.masthead .intro-text .intro-heading {
 .portfolio-modal .close-modal {
   position: absolute;
   top: 25px;
-  right: 25px;
+  right: 10px;
   width: 75px;
-  height: 75px;
+  height: 35px;
   cursor: pointer;
   background-color: transparent;
 }
@@ -360,7 +363,7 @@ header.masthead .intro-text .intro-heading {
   /* Safari and Chrome */
   z-index: 1051;
   width: 1px;
-  height: 75px;
+  height: 35px;
   margin-left: 35px;
   /* IE 9 */
   transform: rotate(45deg);
@@ -371,7 +374,7 @@ header.masthead .intro-text .intro-heading {
   /* Safari and Chrome */
   z-index: 1052;
   width: 1px;
-  height: 75px;
+  height: 35px;
   /* IE 9 */
   transform: rotate(90deg);
   background-color: #212529;
